--- a/leaderboard.html
+++ b/leaderboard.html
@@ -2,35 +2,34 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <title>Топ 100 лидеров</title>
+  <title>Таблица лидеров</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script type="module" src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm"></script>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #f0f2f5;
-      margin: 0;
+      background-color: #f1f3f6;
       padding: 20px;
+      margin: 0;
+      color: #333;
       max-width: 600px;
       margin-inline: auto;
     }
-
     h1 {
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
       font-size: 24px;
+      color: #222;
     }
-
     .back-button {
       position: fixed;
       top: 20px;
       left: 20px;
-      background: none;
+      background: transparent;
       border: none;
-      font-size: 22px;
+      font-size: 24px;
       cursor: pointer;
     }
-
     .user {
       display: flex;
       align-items: center;
@@ -40,37 +39,36 @@
       margin-bottom: 14px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.08);
     }
-
     .user img {
       width: 56px;
       height: 56px;
       border-radius: 50%;
-      margin-right: 10px;
+      margin-right: 12px;
       object-fit: cover;
+      border: 2px solid #ddd;
     }
-
-    .info {
-      flex-grow: 1;
+    .user-info {
       display: flex;
-      justify-content: space-between;
       align-items: center;
-      flex-wrap: wrap;
+      justify-content: space-between;
+      flex-grow: 1;
     }
-
-    .name {
-      font-weight: bold;
+    .user-name {
+      font-size: 16px;
+      font-weight: 600;
     }
-
-    .refs {
+    .referrals {
       font-size: 14px;
-      color: #333;
+      color: #444;
     }
-
     .rank {
-      width: 28px;
       font-size: 18px;
+      width: 32px;
       text-align: center;
-      margin-right: 10px;
+      margin-right: 8px;
+    }
+    .gift {
+      margin-left: 6px;
     }
   </style>
 </head>
@@ -81,45 +79,57 @@
 
   <script type="module">
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
+
     const supabase = createClient(
       'https://fiuybsclifxxhnpkdcfj.supabase.co',
       'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZpdXlic2NsaWZ4eGhucGtkY2ZqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDgxNDY0NDksImV4cCI6MjA2MzcyMjQ0OX0.FMM504dMKv8DclfPeGtZS7pLja0YY6d7ODgyeRdDZgg'
     );
 
-    const list = document.getElementById("list");
-    list.innerHTML = "Загрузка...";
+    const list = document.getElementById('list');
+    list.innerText = 'Загрузка...';
 
     try {
-      const { data: users, error } = await supabase.from("users").select("*");
-      if (error || !users) throw error;
+      const { data: allUsers, error } = await supabase
+        .from("users")
+        .select("telegram_id, first_name, last_name, username, photo_url, referred_by");
 
-      const leaders = users
-        .map(user => ({
-          ...user,
-          name: [user.first_name, user.last_name].filter(Boolean).join(" ") || user.username || "Без имени",
-          refs: users.filter(u => u.referred_by === user.telegram_id).length
-        }))
-        .sort((a, b) => b.refs - a.refs)
+      if (error) throw error;
+
+      const leaderboard = allUsers
+        .map(user => {
+          const fullName = [user.first_name, user.last_name].filter(Boolean).join(" ") || user.username || "Без имени";
+          const referrals = allUsers.filter(u => u.referred_by === user.telegram_id).length;
+          return {
+            ...user,
+            fullName,
+            referrals
+          };
+        })
+        .filter(u => u.telegram_id)
+        .sort((a, b) => b.referrals - a.referrals)
         .slice(0, 100);
 
-      list.innerHTML = "";
+      list.innerHTML = '';
 
-      leaders.forEach((u, i) => {
-        const el = document.createElement("div");
-        el.className = "user";
-        const rank = i + 1 <= 3 ? ["🥇","🥈","🥉"][i] : i + 1;
-        el.innerHTML = `
-          <div class="rank">${rank}</div>
-          <img src="${u.photo_url || 'https://via.placeholder.com/56'}" />
-          <div class="info">
-            <div class="name">${u.name}</div>
-            <div class="refs">👥 ${u.refs}</div>
+      leaderboard.forEach((user, index) => {
+        const rank = index + 1;
+        const trophy = rank === 1 ? '🥇' : rank === 2 ? '🥈' : rank === 3 ? '🥉' : rank;
+
+        const div = document.createElement('div');
+        div.className = 'user';
+        div.innerHTML = `
+          <div class="rank">${trophy}</div>
+          <img src="${user.photo_url || 'https://via.placeholder.com/56'}" alt="Аватар">
+          <div class="user-info">
+            <div class="user-name">${user.fullName}</div>
+            <div class="referrals">👥 ${user.referrals}${index < 25 ? ' <span class="gift">🎁</span>' : ''}</div>
           </div>
         `;
-        list.appendChild(el);
+        list.appendChild(div);
       });
-    } catch (e) {
-      list.innerText = "Ошибка загрузки: " + e.message;
+    } catch (err) {
+      list.innerText = 'Ошибка загрузки: ' + err.message;
+      console.error(err);
     }
   </script>
 </body>
