--- a/index.html
+++ b/index.html
@@ -8,111 +8,94 @@
   <script type="module" src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm"></script>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: sans-serif;
+      background: #f1f4f9;
+      padding: 20px;
       text-align: center;
-      background: #f1f3f6;
-      padding: 30px;
-      color: #222;
     }
-
+    h1 {
+      font-size: 22px;
+      margin-bottom: 15px;
+    }
     #countdown {
-      font-size: 36px;
+      font-size: 34px;
       font-weight: bold;
-      margin: 10px 0 30px;
-      color: #0077cc;
-      letter-spacing: 2px;
+      margin-bottom: 30px;
     }
-
-    .profile {
-      margin-bottom: 20px;
-    }
-
     .profile img {
-      width: 90px;
-      height: 90px;
+      width: 80px;
+      height: 80px;
       border-radius: 50%;
       margin-bottom: 10px;
-      border: 3px solid #ddd;
+      border: 2px solid #ccc;
     }
-
-    .profile #name {
+    .profile-name {
       font-size: 20px;
       font-weight: bold;
     }
-
     .button-row {
       display: flex;
       justify-content: center;
       gap: 10px;
-      margin-bottom: 20px;
+      margin: 25px 0;
     }
-
-    .btn {
+    .button-row button {
       flex: 1;
-      max-width: 140px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #0088cc;
-      color: white;
-      border: none;
-      border-radius: 10px;
       padding: 12px;
       font-size: 16px;
+      border: none;
+      border-radius: 10px;
+      color: white;
+      background: #0088cc;
       cursor: pointer;
-      transition: background 0.2s;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
-
-    .btn svg {
+    .button-row button.share {
+      background: #44c767;
+      max-width: 60px;
+    }
+    .button-row button svg {
       width: 20px;
       height: 20px;
-      margin-left: 6px;
+      margin-left: 8px;
     }
-
-    .btn.copied {
-      background: #44c767 !important;
+    .copied {
+      background: #4CAF50 !important;
     }
-
-    .leaderboard-btn {
-      background: #0088cc;
+    a.button {
+      display: block;
+      width: 100%;
+      margin-top: 10px;
+      padding: 12px;
+      background: #444;
       color: white;
-      padding: 14px;
-      font-size: 16px;
       border-radius: 10px;
       text-decoration: none;
-      display: inline-block;
-      width: 300px;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <h2>До запуска осталось:</h2>
+  <h1>До запуска осталось:</h1>
   <div id="countdown">Загрузка...</div>
 
   <div class="profile" id="profile" style="display:none;">
-    <img id="avatar" src="" />
-    <div id="name"></div>
+    <img id="avatar" src="" alt="Аватар" />
+    <div id="name" class="profile-name"></div>
   </div>
 
   <div class="button-row">
-    <button class="btn" id="copyBtn">
-      Пригласить
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-4 4h4a2 2 0 012 2v6a2 2 0 01-2 2h-8a2 2 0 01-2-2v-6a2 2 0 012-2z" />
-      </svg>
-    </button>
-    <button class="btn" id="shareBtn">
-      Поделиться
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 8a3 3 0 11-6 0 3 3 0 016 0zm6 6a3 3 0 11-6 0 3 3 0 016 0zm-6 6a3 3 0 11-6 0 3 3 0 016 0z" />
-      </svg>
-    </button>
+    <button id="copyBtn">Пригласить 📋</button>
+    <button id="shareBtn" class="share">↗️</button>
   </div>
 
-  <a href="leaderboard.html" class="leaderboard-btn">Таблица лидеров</a>
+  <a href="leaderboard.html" class="button">🏆 Таблица лидеров</a>
 
   <script type="module">
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
+
     const tg = window.Telegram.WebApp;
     tg.ready();
 
@@ -142,10 +125,13 @@
     tick();
 
     const user = tg.initDataUnsafe?.user;
+    const urlParams = new URLSearchParams(window.location.search);
+    const refIdRaw = urlParams.get("startapp") || urlParams.get("ref") || "";
+    const refId = refIdRaw.replace("ref=", "").replace("ref", "");
 
     if (user) {
-      const fullName = [user.first_name, user.last_name].filter(Boolean).join(' ') || user.username || "Без имени";
-      avatar.src = user.photo_url;
+      const fullName = [user.first_name, user.last_name].filter(Boolean).join(' ');
+      avatar.src = user.photo_url || '';
       nameEl.innerText = fullName;
       profile.style.display = "block";
 
@@ -154,48 +140,41 @@
       copyBtn.onclick = () => {
         navigator.clipboard.writeText(refLink).then(() => {
           copyBtn.classList.add("copied");
-          copyBtn.innerHTML = 'Скопировано ✓';
+          copyBtn.innerText = "Скопировано ✓";
           setTimeout(() => {
             copyBtn.classList.remove("copied");
-            copyBtn.innerHTML = `Пригласить
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-4 4h4a2 2 0 012 2v6a2 2 0 01-2 2h-8a2 2 0 01-2-2v-6a2 2 0 012-2z" />
-              </svg>`;
-          }, 2000);
+            copyBtn.innerText = "Пригласить 📋";
+          }, 1500);
         });
       };
 
       shareBtn.onclick = () => {
-        tg.openTelegramLink(`https://t.me/share/url?url=${encodeURIComponent(refLink)}&text=${encodeURIComponent("🎁 Попробуй выиграть стикеры, NFT и TON! Участвуй в календаре подарков.")}`);
+        tg.openTelegramLink(`https://t.me/share/url?url=${encodeURIComponent(refLink)}&text=${encodeURIComponent("🎁 Участвуй в Календаре Подарков и получай стикеры, NFT и TON!")}`);
       };
 
-      let refId = null;
-      const urlParams = new URLSearchParams(window.location.search);
-      const raw = urlParams.get("startapp");
-      if (raw?.startsWith("ref=")) {
-        refId = Number(raw.replace("ref=", ""));
-      }
-
-
-      const { data: existingUser } = await supabase
-        .from("users")
-        .select("id")
-        .eq("telegram_id", user.id)
+      // Проверка: записан ли пользователь уже?
+      const { data: existing } = await supabase
+        .from('users')
+        .select('id')
+        .eq('telegram_id', user.id)
         .single();
 
-      if (!existingUser && user.id !== refId) {
-        const { error } = await supabase.from("users").insert({
+      if (!existing) {
+        const { error } = await supabase.from('users').insert({
           telegram_id: user.id,
           username: user.username,
+          first_name: user.first_name,
+          last_name: user.last_name,
           photo_url: user.photo_url,
-          referred_by: refId || null
+          referred_by: (refId && String(user.id) !== String(refId)) ? Number(refId) : null
         });
-        if (error) console.error("Ошибка при сохранении:", error);
+
+        if (error) console.error("❌ Ошибка записи в Supabase:", error.message);
+        else console.log("✅ Пользователь записан.");
       }
     } else {
-      alert("❗ Открой мини-приложение через Telegram.");
+      alert("❗ Запусти приложение через Telegram.");
     }
   </script>
 </body>
 </html>
-
