Redesigned index page

--- a/index.html
+++ b/index.html
@@ -152,26 +152,39 @@
         tg.openTelegramLink(`https://t.me/share/url?url=${encodeURIComponent(refLink)}&text=${encodeURIComponent("🎁 Участвуй в Календаре Подарков и получай стикеры, NFT и TON!")}`);
       };
 
-      // Проверка: записан ли пользователь уже?
-      const { data: existing } = await supabase
-        .from('users')
-        .select('id')
-        .eq('telegram_id', user.id)
-        .single();
+      try {
+        const { data: existingUser, error: selectError } = await supabase
+          .from('users')
+          .select('id')
+          .eq('telegram_id', user.id)
+          .maybeSingle(); // избегаем исключения при отсутствии
 
-      if (!existing) {
-        const { error } = await supabase.from('users').insert({
-          telegram_id: user.id,
-          username: user.username,
-          first_name: user.first_name,
-          last_name: user.last_name,
-          photo_url: user.photo_url,
-          referred_by: (refId && String(user.id) !== String(refId)) ? Number(refId) : null
-        });
+        if (selectError) {
+          console.error("❌ Ошибка при проверке пользователя:", selectError.message);
+        }
 
-        if (error) console.error("❌ Ошибка записи в Supabase:", error.message);
-        else console.log("✅ Пользователь записан.");
+        if (!existingUser) {
+          const { error: insertError } = await supabase.from('users').insert({
+            telegram_id: user.id,
+            username: user.username,
+            first_name: user.first_name,
+            last_name: user.last_name,
+            photo_url: user.photo_url,
+            referred_by: (refId && String(user.id) !== String(refId)) ? Number(refId) : null
+          });
+
+          if (insertError) {
+            console.error("❌ Ошибка вставки в Supabase:", insertError.message);
+          } else {
+            console.log("✅ Новый пользователь успешно записан.");
+          }
+        } else {
+          console.log("ℹ️ Пользователь уже существует в базе.");
+        }
+      } catch (e) {
+        console.error("💥 Критическая ошибка:", e);
       }
+
     } else {
       alert("❗ Запусти приложение через Telegram.");
     }
