--- a/index.html
+++ b/index.html
@@ -56,11 +56,6 @@
       background: #44c767;
       max-width: 60px;
     }
-    .button-row button svg {
-      width: 20px;
-      height: 20px;
-      margin-left: 8px;
-    }
     .copied {
       background: #4CAF50 !important;
     }
@@ -152,37 +147,28 @@
         tg.openTelegramLink(`https://t.me/share/url?url=${encodeURIComponent(refLink)}&text=${encodeURIComponent("🎁 Участвуй в Календаре Подарков и получай стикеры, NFT и TON!")}`);
       };
 
-      try {
-        const { data: existingUser, error: selectError } = await supabase
-          .from('users')
-          .select('id')
-          .eq('telegram_id', user.id)
-          .maybeSingle(); // избегаем исключения при отсутствии
+      // 🧪 Проверка вставки в базу
+      console.log("🧪 Попытка вставки нового пользователя в Supabase...");
 
-        if (selectError) {
-          console.error("❌ Ошибка при проверке пользователя:", selectError.message);
-        }
+      const referred_by = (refId && String(user.id) !== String(refId)) ? Number(refId) : null;
+      console.log("👤 Telegram ID:", user.id);
+      console.log("🔗 Ref ID:", referred_by);
 
-        if (!existingUser) {
-          const { error: insertError } = await supabase.from('users').insert({
-            telegram_id: user.id,
-            username: user.username,
-            first_name: user.first_name,
-            last_name: user.last_name,
-            photo_url: user.photo_url,
-            referred_by: (refId && String(user.id) !== String(refId)) ? Number(refId) : null
-          });
+      const { data: insertData, error: insertError } = await supabase
+        .from('users')
+        .insert({
+          telegram_id: user.id,
+          username: user.username,
+          first_name: user.first_name,
+          last_name: user.last_name,
+          photo_url: user.photo_url,
+          referred_by: referred_by
+        });
 
-          if (insertError) {
-            console.error("❌ Ошибка вставки в Supabase:", insertError.message);
-          } else {
-            console.log("✅ Новый пользователь успешно записан.");
-          }
-        } else {
-          console.log("ℹ️ Пользователь уже существует в базе.");
-        }
-      } catch (e) {
-        console.error("💥 Критическая ошибка:", e);
+      if (insertError) {
+        console.error("❌ Ошибка вставки:", insertError.message, insertError.details);
+      } else {
+        console.log("✅ Пользователь успешно добавлен:", insertData);
       }
 
     } else {
