Redesigned index page

--- a/open.html
+++ b/open.html
@@ -8,19 +8,29 @@
   <style>
     body {
       font-family: sans-serif;
-      background: #f4f6fa;
+      background: #1a1d22;
+      color: white;
       padding: 20px;
       text-align: center;
     }
-    h1 {
-      font-size: 22px;
-      margin-bottom: 15px;
+    .back-button {
+      position: absolute;
+      top: 16px;
+      left: 16px;
+      background: none;
+      border: none;
+      color: #aaa;
+      font-size: 24px;
+      cursor: pointer;
+    }
+    .container {
+      margin-top: 60px;
     }
     .task {
-      background: white;
+      background: #2a2f36;
       padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.5);
       margin-bottom: 20px;
     }
     .btn {
@@ -35,44 +45,78 @@
       color: white;
       cursor: pointer;
     }
-    .btn.red {
-      background-color: #d9534f;
-    }
-    .btn.green {
-      background-color: #5cb85c;
-    }
-    #openBoxBtn {
+    .btn.red { background-color: #d9534f; }
+    .btn.green { background-color: #5cb85c; }
+
+    .reward-screen {
       display: none;
+      animation: fadeIn 1s ease-in-out forwards;
+    }
+    .reward-box {
+      margin: 40px auto 20px;
+      width: 120px;
+      height: 120px;
+      background: radial-gradient(circle, #ffcc00, #ff8800);
+      border-radius: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 32px;
+      font-weight: bold;
+      animation: pulse 1s infinite;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to   { opacity: 1; }
+    }
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.1); }
+      100% { transform: scale(1); }
     }
   </style>
 </head>
 <body>
-  <h1>🎁 Задание дня</h1>
-  <div class="task">
-    <p>Вступи в наш <b>канал</b> и <b>чат</b>, чтобы открыть ячейку!</p>
-    <button class="btn" onclick="window.open('https://t.me/calendargift', '_blank')">📢 Перейти в канал</button>
-    <button class="btn" onclick="window.open('https://t.me/adventon', '_blank')">💬 Перейти в чат</button>
-    <button class="btn" id="checkBtn">🔍 Проверить</button>
-    <button class="btn green" id="openBoxBtn">✅ Открыть ячейку</button>
+  <button class="back-button" onclick="window.location.href='calendar.html'">←</button>
+  <div class="container">
+    <h1>🎁 Задание дня</h1>
+    <div class="task" id="taskBox">
+      <p>Подпишись на <b>канал</b> и <b>чат</b>, чтобы открыть ячейку!</p>
+      <button class="btn" onclick="window.open('https://t.me/calendargift', '_blank')">📢 Перейти в канал</button>
+      <button class="btn" onclick="window.open('https://t.me/adventon', '_blank')">💬 Перейти в чат</button>
+      <button class="btn" id="checkBtn">🔍 Проверить</button>
+      <button class="btn green" id="openBoxBtn">✅ Открыть ячейку</button>
+    </div>
+
+    <div class="reward-screen" id="rewardScreen">
+      <h2>Поздравляем!</h2>
+      <div class="reward-box" id="rewardBox">🎉</div>
+      <p id="rewardText">Вы получили ... поинтов!</p>
+      <button class="btn" onclick="window.location.href='calendar.html'">Назад к календарю</button>
+    </div>
   </div>
 
   <script>
     const tg = window.Telegram.WebApp;
     tg.ready();
     const user = tg.initDataUnsafe?.user;
+
     const checkBtn = document.getElementById("checkBtn");
     const openBoxBtn = document.getElementById("openBoxBtn");
+    const taskBox = document.getElementById("taskBox");
+    const rewardScreen = document.getElementById("rewardScreen");
+    const rewardBox = document.getElementById("rewardBox");
+    const rewardText = document.getElementById("rewardText");
 
-    async function checkMembership() {
+    openBoxBtn.style.display = "none";
+
+    checkBtn.onclick = async () => {
       checkBtn.disabled = true;
       checkBtn.innerText = "Проверка...";
-
       try {
         const res = await fetch(`https://gift-calendar-zvyd.vercel.app/api/check-membership?telegram_id=${user.id}`);
-
-
         const data = await res.json();
-
         if (data.channel && data.chat) {
           checkBtn.style.display = "none";
           openBoxBtn.style.display = "block";
@@ -94,10 +138,13 @@
       }, 2500);
     }
 
-    checkBtn.onclick = checkMembership;
     openBoxBtn.onclick = () => {
-      alert("🎉 Поздравляем! Вы получили от 10 до 100 поинтов!");
-      // Здесь будет анимация и логика начисления награды позже
+      const reward = [10, 20, 30, 50, 75, 100][Math.floor(Math.random() * 6)];
+      taskBox.style.display = "none";
+      rewardScreen.style.display = "block";
+      rewardBox.innerText = `+${reward}`;
+      rewardText.innerText = `Вы получили ${reward} поинтов!`;
+      // Здесь можно добавить запись в базу данных о полученной награде
     }
   </script>
 </body>
